// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should open the popover when the display value is clicked 1`] = `
<div
  class="select"
>
  <button
    class="displayValue"
  >
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-hidden="true"
      class="toggle fa fa-chevron-down"
    />
  </button>
  <div />
</div>
`;

exports[`The component should open the popover when the display value is clicked 2`] = `
"<div>
  <div data-reactroot=\\"\\" class=\\"container\\">
    <div class=\\"popover\\" style=\\"top: 10px;\\">
      <ul class=\\"optionsList\\">
        <li>
          <button class=\\"option icon\\">
            <!-- react-text: 6 -->Option 1
            <!-- /react-text -->
          </button>
        </li>
        <li>
          <button class=\\"option icon\\">
            <!-- react-text: 9 -->Option 2
            <!-- /react-text -->
          </button>
        </li>
        <li class=\\"divider\\"></li>
        <li>
          <button class=\\"option icon\\">
            <!-- react-text: 13 -->Option 3
            <!-- /react-text -->
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
<div>
  <div data-reactroot=\\"\\" class=\\"backdrop\\"></div>
</div>"
`;

exports[`The component should render with an icon 1`] = `
<div
  class="select"
>
  <button
    class="displayValue hasIcon"
  >
    <span
      aria-hidden="true"
      class="frontIcon fa fa-plus"
    />
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-hidden="true"
      class="toggle fa fa-chevron-down"
    />
  </button>
</div>
`;

exports[`The component should render with the popover closed 1`] = `
<div
  class="select"
>
  <button
    class="displayValue"
  >
    <div
      aria-label="My text"
      class="croppedText"
      title="My text"
    >
      <div
        aria-hidden="true"
        class="front"
      >
        My t
      </div>
      <div
        aria-hidden="true"
        class="back"
      >
        <span>
          ext
        </span>
      </div>
      <div
        class="whole"
      >
        My text
      </div>
    </div>
    <span
      aria-hidden="true"
      class="toggle fa fa-chevron-down"
    />
  </button>
</div>
`;
